project(CAMSENSE)
cmake_minimum_required (VERSION 2.8)
INCLUDE_DIRECTORIES(dep)

SET(CMAKE_CONFIGURATION_TYPES Release CACHE STRING "" FORCE)
SET(EXECUTABLE_OUTPUT_PATH ${CAMSENSE_SOURCE_DIR}/bin/lib CACHE PATH "Build directory" FORCE)
SET(LIBRARY_OUTPUT_PATH ${CAMSENSE_SOURCE_DIR}/bin/lib CACHE PATH "Build directory" FORCE)
add_subdirectory(src)